log/build_2020-11-24_14-03-37/py_pubsub/stderr.log
  File "/home/iic/conversion/install/py_pubsub/lib/python3.6/site-packages/py_pubsub/subscriber_member_function.py", line 49
    print type(cv_image)
             ^
SyntaxError: invalid syntax

